# starnavi

./: .env  Dockerfile  README.md  automated_bot.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
misc/: Starnavi_Test_Task.postman_collection.json
social_network/: middleware.py  models.py  serializers.py  urls.py  views.py
social_network/migrations/: 0001_initial.py  0002_like_post_like_post_like_user.py  0003_alter_like_unique_together.py
starnavi/: asgi.py  settings.py  urls.py  wsgi.py
