[tool.poetry]
name = "starnavi"
version = "1.0"
description = "Starnavi test task"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
psycopg2-binary = "^2.9"
djangorestframework = "^3.14"
markdown = "^3.4"
djangorestframework-simplejwt = "^5.2"
python-dotenv = "^1.0"
faker = "^18.7"
aiohttp = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
